--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cycler==0.12.1
 Cython==3.1.2
 decorator==5.2.1
 demucs==4.0.1
+deepfilternet
 dora_search==0.1.12
 dtw-python==1.5.3
 einops==0.8.1
