--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ mpmath==1.3.0
 networkx==3.4.2
 noisereduce==3.0.3
 numba==0.61.2
-numpy==2.2.6
+numpy
 omegaconf==2.3.0
 openai-whisper==20250625
 openunmix==1.3.0
