--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,148 @@
+aiofiles==24.1.0
+altair==5.5.0
+annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+appdirs==1.4.4
+attrs==25.3.0
+audioread==3.0.1
 auto-editor==28.0.2
 basswood-av==15.2.1
+blinker==1.9.0
+cachetools==6.1.0
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
 cloudpickle==3.1.1
 colorama==0.4.6
+colorlog==6.9.0
 contourpy==1.3.2
 cycler==0.12.1
 Cython==3.1.2
 decorator==5.2.1
+DeepFilterLib==0.5.6
+DeepFilterNet==0.5.6
 demucs==4.0.1
-deepfilternet==0.5.6
+diffq==0.2.4
 dora_search==0.1.12
 dtw-python==1.5.3
 einops==0.8.1
+exceptiongroup==1.3.0
+fastapi==0.115.14
+ffmpy==0.6.0
 filelock==3.18.0
 fonttools==4.58.5
 fsspec==2025.5.1
+gitdb==4.0.12
+GitPython==3.1.44
 gradio==5.35.0
+gradio_client==1.10.4
+groovy==0.1.2
+grpcio==1.67.1
+grpcio-tools==1.67.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.2
+hydra-colorlog==0.1.4
 idna==3.10
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
 Jinja2==3.1.6
 joblib==1.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 julius==0.2.7
 kiwisolver==1.4.8
 lameenc==1.8.1
+lazy_loader==0.4
 librosa==0.11.0
 llvmlite==0.44.0
+loguru==0.7.3
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
+mdurl==0.1.2
 more-itertools==10.7.0
 moviepy==2.2.1
 mpmath==1.3.0
+msgpack==1.1.1
+narwhals==1.45.0
 networkx==3.4.2
 noisereduce==3.0.3
 numba==0.61.2
-numpy
+numpy==1.26.4
 omegaconf==2.3.0
 openai-whisper==20250625
 openunmix==1.3.0
-packaging==25.0
+orjson==3.10.18
+packaging==23.2
+pandas==2.3.0
 pillow==11.3.0
+platformdirs==4.3.8
+pooch==1.8.2
 proglog==0.1.12
+progressbar==2.5
+protobuf==5.29.5
+pyarrow==20.0.0
+pybind11==2.13.6
 pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.19.2
 pyparsing==3.2.3
+pyroomacoustics==0.8.4
+pystoi==0.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.4
 retrying==1.4.0
+rich==14.0.0
+rpds-py==0.26.0
+ruff==0.12.2
+safehttpx==0.1.6
+scikit-learn==1.7.0
 scipy==1.15.3
+semantic-version==2.10.0
+shellingham==1.5.4
 six==1.17.0
-soundfile==0.13.1
+smmap==5.0.2
+sniffio==1.3.1
+sounddevice==0.5.2
+soundfile==0.12.1
+soxr==0.5.0.post1
+starlette==0.46.2
+streamlit==1.46.1
 submitit==1.5.3
 sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.9.0
+toml==0.10.2
+tomlkit==0.13.3
 torchlibrosa==0.1.0
+tornado==6.5.1
 tqdm==4.67.1
 treetable==0.2.5
+typer==0.16.0
+typing-inspection==0.4.1
 typing_extensions==4.14.0
+tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.35.0
+voicefixer==0.1.3
+watchdog==6.0.0
+websockets==15.0.1
 whisper-timestamped==1.15.8
+win32_setctime==1.2.0
 
 --extra-index-url=https://download.pytorch.org/whl/cu128
 torch==2.7.1
