--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+ae-ffmpeg==1.1.2
 aiofiles==24.1.0
 altair==5.5.0
 annotated-types==0.7.0
@@ -5,8 +6,10 @@ antlr4-python3-runtime==4.9.3
 anyio==4.9.0
 appdirs==1.4.4
 attrs==25.3.0
+audiolab==0.2.8
 audioread==3.0.1
 auto-editor==28.0.2
+av==10.0.0
 basswood-av==15.2.1
 blinker==1.9.0
 cachetools==6.1.0
@@ -20,6 +23,7 @@ colorlog==6.9.0
 contourpy==1.3.2
 cycler==0.12.1
 Cython==3.1.2
+cytoolz==1.0.1
 decorator==5.2.1
 DeepFilterLib==0.5.6
 DeepFilterNet==0.5.6
@@ -45,10 +49,12 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 huggingface-hub==0.33.2
+humanize==4.12.3
 hydra-colorlog==0.1.4
 idna==3.10
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
+intervaltree==3.1.0
 Jinja2==3.1.6
 joblib==1.5.1
 jsonschema==4.24.0
@@ -57,7 +63,9 @@ julius==0.2.7
 kiwisolver==1.4.8
 lameenc==1.8.1
 lazy_loader==0.4
+lhotse==1.30.3
 librosa==0.11.0
+lilcom==1.8.1
 llvmlite==0.44.0
 loguru==0.7.3
 markdown-it-py==3.0.0
@@ -94,6 +102,7 @@ pydeck==0.9.1
 pydub==0.25.1
 Pygments==2.19.2
 pyparsing==3.2.3
+pyrnnoise==0.3.6
 pyroomacoustics==0.8.4
 pystoi==0.4.1
 python-dateutil==2.9.0.post0
@@ -114,8 +123,10 @@ scipy==1.15.3
 semantic-version==2.10.0
 shellingham==1.5.4
 six==1.17.0
+smart_open==7.3.0.post1
 smmap==5.0.2
 sniffio==1.3.1
+sortedcontainers==2.4.0
 sounddevice==0.5.2
 soundfile==0.12.1
 soxr==0.5.0.post1
@@ -123,11 +134,13 @@ starlette==0.46.2
 streamlit==1.46.1
 submitit==1.5.3
 sympy==1.14.0
+tabulate==0.9.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.9.0
 toml==0.10.2
 tomlkit==0.13.3
+toolz==1.0.0
 torchlibrosa==0.1.0
 tornado==6.5.1
 tqdm==4.67.1
@@ -143,7 +156,8 @@ watchdog==6.0.0
 websockets==15.0.1
 whisper-timestamped==1.15.8
 win32_setctime==1.2.0
+wrapt==1.17.2
 
 --extra-index-url=https://download.pytorch.org/whl/cu128
-torch==2.7.1
-torchaudio==2.7.1
+torch==2.7.1+cu128
+torchaudio==2.7.1+cu128
